WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134900
ASSERT(isMainThread()) under OneShotDisplayLinkHandler
https://bugs.webkit.org/show_bug.cgi?id=134900
Summary
ASSERT(isMainThread()) under OneShotDisplayLinkHandler
Tim Horton
Reported
2014-07-14 14:36:05 PDT
isMainThread is sometimes a lie in the UI process.
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-07-14 15:00:41 PDT
http://trac.webkit.org/changeset/171087
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug