ASSERT(isMainThread()) under OneShotDisplayLinkHandler https://bugs.webkit.org/show_bug.cgi?id=134900

Reviewed by Simon Fraser.

* UIProcess/mac/RemoteLayerTreeDrawingAreaProxy.mm:
(-[OneShotDisplayLinkHandler displayLinkFired:]):
isMainThread means the Web thread sometimes.


Canonical link: https://commits.webkit.org/152850@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171087 268f45cc-cd09-0410-ab3c-d52691b4dbfc